res, 이미지 추가

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 secrets.json
 # 
 media/*
+images/*
 # Created by https://www.toptal.com/developers/gitignore/api/venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=venv
 
