--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.5.2
 asttokens==2.0.8
+async-generator==1.10
+attrs==22.1.0
 backcall==0.2.0
+certifi==2022.9.24
+cffi==1.15.1
 colorama==0.4.5
 decorator==5.1.1
 Django==3.2.13
@@ -9,20 +13,33 @@ django-bootstrap5==22.1
 django-extensions==3.2.1
 django-imagekit==4.1.0
 django-widget-tweaks==1.4.12
+exceptiongroup==1.0.0
 executing==1.1.1
+h11==0.14.0
+idna==3.4
 ipython==8.5.0
 jedi==0.18.1
 matplotlib-inline==0.1.6
+outcome==1.2.0
 parso==0.8.3
 pickleshare==0.7.5
 pilkit==2.0
 Pillow==9.2.0
 prompt-toolkit==3.0.31
 pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.13.0
+PySocks==1.7.1
 pytz==2022.4
+selenium==4.5.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 sqlparse==0.4.3
 stack-data==0.5.1
 traitlets==5.4.0
+trio==0.22.0
+trio-websocket==0.9.2
+urllib3==1.26.12
 wcwidth==0.2.5
+wsproto==1.2.0
