--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asttokens==2.0.8
 async-generator==1.10
 attrs==22.1.0
 backcall==0.2.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2022.9.24
 cffi==1.15.1
 colorama==0.4.5
@@ -35,6 +37,7 @@ selenium==4.5.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
 stack-data==0.5.1
 traitlets==5.4.0
