발표용 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ secrets.json
 # 
 media/*
 images/*
+*.pptx
 # Created by https://www.toptal.com/developers/gitignore/api/venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=venv
 
